# do-autoclicker

./: CMakeLists.txt
src/: main.cpp
